syntax = "proto3";
import "rpc_base.proto";
import "rpc_paging.proto";
option java_generic_services = true;
option java_package = "org.marketcetera.marketdata.core.rpc";
option java_outer_classname = "MarketdataRpc";

enum InstrumentType {
    EQUITY = 0;
    OPTION = 1;
    FUTURE = 2;
    CURRENCY = 3;
}

message Instrument {
    string payload = 1;
}

message MarketDataRequest {
    string sessionId = 1;
    string request = 2;
    bool streamEvents = 3;
}

message MarketDataResponse {
    int64 id = 1;
    bool failed = 2;
    string message = 3;
}

message LastUpdateRequest {
    string sessionId = 1;
    int64 id = 2;
}

message LastUpdateResponse {
    int64 timestamp = 1;
    bool failed = 2;
    string message = 3;
}

message CancelRequest {
    string sessionId = 1;
    int64 id = 2;
}

message CancelResponse {
}

message Event {
    string payload = 1;
}

message EventsRequest {
    string sessionId = 1;
    int64 id = 2;
}

message EventsResponse {
    int64 id = 1;
    repeated string payload = 2;
    string message = 3;
    bool failed = 4;
}

message AllEventsRequest {
    string sessionId = 1;
    repeated int64 id = 2;
}

message AllEventsResponse {
    repeated EventsResponse events = 1;
    string message = 2;
    bool failed = 3;
}

message SnapshotRequest {
    string sessionId = 1;
    Instrument instrument = 2;
    ContentAndCapability content = 3;
    string provider = 4;
}

message SnapshotResponse {
    repeated string payload = 1;
    string message = 2;
    bool failed = 3;
}

message SnapshotPageRequest {
    string sessionId = 1;
    Instrument instrument = 2;
    ContentAndCapability content = 3;
    string provider = 4;
    PageRequest page = 5;
}

message SnapshotPageResponse {
    repeated string payload = 1;
    string message = 2;
    bool failed = 3;
}

enum ContentAndCapability {
    TOP_OF_BOOK = 0;
    OPEN_BOOK = 1;
    MARKET_STAT = 2;
    TOTAL_VIEW = 3;
    LEVEL_2 = 4;
    LATEST_TICK = 5;
    BBO10 = 6;
    NBBO = 7;
    DIVIDEND = 8;
    AGGREGATED_DEPTH = 9;
    UNAGGREGATED_DEPTH = 10;
    IMBALANCE = 11;
    UNKNOWN = 12;
    EVENT_BOUNDARY = 13;
}
message AvailableCapabilityRequest {
    string sessionId = 1;
}

message AvailableCapabilityResponse {
    repeated ContentAndCapability capability = 1;
    string message = 2;
    bool failed = 3;
}

service MarketDataRpcService {
    rpc login(LoginRequest) returns (LoginResponse);
    rpc logout(LogoutRequest) returns (LogoutResponse);
    rpc heartbeat(HeartbeatRequest) returns (stream HeartbeatResponse) {}
    rpc request(MarketDataRequest) returns (MarketDataResponse);
    rpc getLastUpdate(LastUpdateRequest) returns (LastUpdateResponse);
    rpc cancel(CancelRequest) returns (CancelResponse);
    rpc getEvents(EventsRequest) returns (EventsResponse);
    rpc getAllEvents(AllEventsRequest) returns (AllEventsResponse);
    rpc getSnapshot(SnapshotRequest) returns (SnapshotResponse);
    rpc getSnapshotPage(SnapshotPageRequest) returns (SnapshotPageResponse);
    rpc getAvailableCapability(AvailableCapabilityRequest) returns (AvailableCapabilityResponse);
}
